option('gtk_doc', type : 'boolean', value : false)
# option('gtk_doc-html', type : 'boolean', value : true)
# option('gtk_doc-pdf', type : 'boolean', value : false)

option('iconv', type : 'combo', choices : ['auto', 'builtin', 'system'], value : 'auto')
option('crypto', type : 'feature', value : 'enabled')
option('introspection', type : 'boolean', value : true)
option('vala', type : 'boolean', value : true)
option('have_iconv_detect_h', type : 'boolean', value : false)
